# otoorMarketplace

./: .env.example  .replit  README_TOROD_FULL.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--Prompt-for-Replit-Agent-3-Add-Cart-Wishlist-Checkout-Currency-Symbol-SAR-Context-Framewo-1760181345961_1760181345962.txt  Pasted--agent-3-React-TypeScript-Vite-Tailw-1760178805916_1760178805916.txt  Pasted-Add-a-professional-Testimonials-section-to-the-Home-page-matching-the-existing-Charcoal-Gold-Ivory--1759913120320_1759913120320.txt  Pasted-Add-a-professional-brand-logo-integration-across-the-app-Goals-Introduce-brand-logo-assets--1759748432766_1759748432766.txt  Pasted-Agent-3-Brief-Build-a-Professional-Blog-Module-Multilingual-No-Comments-with-Admin-Management--1760248604543_1760248604544.txt  Pasted-Context-You-generated-a-simple-landing-page-We-need-to-align-the-frontend-with-the-full-spec-bili-1759691411416_1759691411417.txt  Pasted-Fix-auction-timers-product-routing-and-complete-the-Auction-Product-Detail-requirements-Scope--1759765441312_1759765441313.txt  Pasted-Fix-layout-and-navigation-inconsistencies-across-the-site-Scope-1-Header-Navbar-alignment-RT-1759726629354_1759726629355.txt  Pasted-Improve-mobile-responsiveness-across-the-app-no-backend-changes-Scope-1-Global-breakpoints-l-1759727558998_1759727558998.txt  Pasted-Mobile-UI-refinement-Header-Product-Cards-with-Noon-like-compact-style-Keep-outputs-minimal-and-1759728418897_1759728418898.txt  (+4 more)
backend-node/: .env.example  .gitignore  package-lock.json  package.json  (+1 more)
(+313 files in other folders)
